Adicionando projeto setup e icon na barra do form

--- a/MyPomodoroTimer/Form1.resx
+++ b/MyPomodoroTimer/Form1.resx
@@ -868,4 +868,86 @@
         VFQlcIJuQp1pXDgG8Je5QXpA2WZ4WE1JTLAwVCECMTX/2Q==
 </value>
   </data>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAIiAAAAEAIAAoEgAAFgAAACgAAAAiAAAAQAAAAAEAIAAAAAAAABEAAOIQAADiEAAAAAAAAAAA
+        AAD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AFkGQRxMrZtYSJ17zFCdj9xMn
+        ZfsSIl/9EiRh/hIjYf4SJWT8EyVk+BMlYPgSI1z3ESVa7BY6gIn///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAniQ0TKmXaEiRc+RQq
+        bv4gNcH/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yUw4v8XLHz/EiFb/BEk
+        We0aOoBG////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////ABQs
+        aNERIVj9HTSt9iop9+0qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8lMNj/EiNe/hEjWPAOOZUk////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AGj6HMREfU/gaMpf/Kin4/yop+PsqKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8iMcr/ER5V/BUwc4X///8A////AP//
+        /wD///8A////AP///wD///8AGTd3XBEcT/0mL97/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yoq
+        9f8SJGL9FC9so////wD///8A////AP///wD///8AFzyLNxEfU/0pLO3/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/xIkYv0WNHh/////AP///wD///8A////ABEgUvolL9//Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8pK/T/EB1R/AAidw////8A////ABQt
+        aNEcM57/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yA1
+        vf8SJmDo////AABVqgMSIVb8Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P83Nvj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/zY1+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/EiJe/CBQnxAUL2y/GzKb/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8tLPj/ODf4/zs6+f8VKnD/Kin4/ycs7P8qKfj/Kin4/yYv4v8pLvD/FSlv/zc2+P82Nfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/x4yrP8ULGjREyZe8yks8/8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8lMtP/FSlt/xs0kP8UI1//DBAy/yIxyf8XK4D/DxdH/xIeVf8SI17/Jy7m/wwR
+        NP8SI17/HTOO/xQobP8nMOH/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKvf/EiRf9RIm
+        YvoqKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/xgxi/8THUb/vcfc/9/k8P8SHk3/ITa//yIz
+        y/8nLuv/HzOu/xIiVP+wvdT/tMHY/x8uWf8SJGD/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/xIlY/kSIVz9Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8VJGH/rbrR/wYI
+        Fv8LECv/bH+l/xcsf/8qKfj/Kin4/yA0uf8vQ3T/Ex4+/wUGEP94h6r/FiRZ/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8TJGP9EyNf/iop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/GSpi/8jQ3/8EBRH/AQEB/3iJrv8TJWL/Kin4/yop+P8WK3n/hpa1/xkmSv8EBQv/ChAo/xor
+        Yf8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/EyRi/hMlYv4qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/xoqYv9AUXn/BAUM/wAAAf9ugaj/EyVh/yop+P8qKfj/Fit5/4iW
+        tf8EBQ//AAAA/wwSL/8cLmX/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/xMm
+        Zf4TJ2f8Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8VJF//qLXL/wYHFv8IDCL/fIyx/xcr
+        e/8qKfj/Kin4/yE1uv81SXj/EBk7/wgJHP9qe6L/Fyda/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8SI1z7EyRf9yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/ITS2/x0u
+        YP//////7/P4/xQjVP8pLu7/Kin4/yop+P8qKfj/ER5N/8fQ4///////Q1aD/xgugf8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/EyRb9hImXe0nLuj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8ZMJL/FiVc/xYlXf8iM73/Kin4/yop+P8qKfj/Kin4/yUw3P8UI1n/GSpi/xYr
+        d/8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/IDS+/xIqYd0VN3xvFSpz/isq
+        +PuNjPv/MTD4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/xMl
+        Y/0ZS48p////ABMhWvcrK/X78vL//8bH/P8sK/j/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Jyvp/yks8v8qKfj/Kin4/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yUw3P8RJVrw////AP///wAUNXaPFChv/n5++v//////fn37/yop+P8qKfj/Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/GjGe/woLJ/8lMd//Kin4/yop
+        +P8qKfj/Kin4/yop+P8qKfj/Kij46Ssp+OoSIVr9Gj6HMf///wD///8A////ABUrY+4fMrX/m5r8/8bI
+        +v8qKfj/Kin4/yop+P8jMNP/Jyvm/yop+P8qKfj/Kin4/ygw7f8qKvX/Kin4/yop+P8iMcr/ESFT/xM4
+        Xf8VIlj/Kin4/yop+P8qKfj/Kin4/yop+P8qKfj/Kin4/yop+ewXK3v+FDFtvP///wD///8A////AP//
+        /wAAK6oGDx9P+SMwyf8qKfj4Kin4/yop+P8qKfj/ITLE/woMKP8SIlz8Eidg/hEqV/4OMlD+DylP/hAi
+        U/4RJVj+DzNY/guZhfwMGTr/FzCE/yoq9/8qKfj/Kin4/yop+P8qKfj/Kin4/yop+P8ZMY7/Eihf6P//
+        /wD///8A////AP///wD///8A////ABhJhhURIFL4HzG1/yop+P8qKfj/Kin4/yop+P8hM77/EB9R/Q87
+        XP4PUG38DUhf/Q2Bcv4IsoD/B7V+/we2ff8OMlP8D1Jl/RA8XP4QJVH+Fipw/ioq9v8qKfj/Kin4/yop
+        +P8WK3X+Eypf5////wD///8A////AP///wD///8A////AP///wD///8AAECABBInX+wUKXL+Kir0/yop
+        +P8qKfj/Kin4/yop+P8cNZv/Cw4r/wwpRf4Jon7+D1Nr/A1UZfwHtX7/C2Nl/w5UZ/0OZHD9CpqB/Q5m
+        cv0RIVj+Kir2/yIxy/8SH1n9FC9rv////wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AFzh5gxMgV/UVKXL+JTLW/yoq9/8VKnL+DihN/gmogP4GuHv/D1lx+QsdO/4NHkX7CqB7/w9V
+        a/0LEjL/EiJd/xIjXv8PH0r+Dy9U+wsSNf8RJVrsFkKKI////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AGjl5YxAkWOEJDCj/D0li/Qucgf0PO137DBc6/RAu
+        WvQMJ0b+DB49/Q4iS/sNRFn+CKqA/gwfQP4MFDj9Eidd4xAmWegJDCX/////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAULm+mDzxe+w48
+        WfwQIVL0Fzx9Wg4gRvoPdXz4CRUu/w48XP0WNnh1FTVzhw4gSvcNUGX6DRtB+////wD///8AEzFuhgAA
+        gAL///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8ADxpC+g4eSfkTMW2d////ABY7flsNOFj9DBg7+w4iS/kKoYf8Dx1K9P///wD///8AEilh0gsS
+        Nf4UMW6n////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AEjFunAgMI/4cPYAu////AP///wATMGy5DiNK/RQvbqQSK2LKC19n/Q5Z
+        bP0QJFnp////AP///wAPKmK3ECJQ4P///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////ABY6eV0aTYwU////AP///wD///8AEStlvwwT
+        N/3///8A////AA0cQ/oKl37+DydP+hIpYdX///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////ABQ0dnAOH0vo////AP///wAWMHs6DRtF+gwXPPwUMnGj////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP/AAP/AAAAA/gAAH8AAAAD8AAAHwAAAAPAA
+        AAPAAAAA4AAAAcAAAADAAAAAwAAAAMAAAABAAAAAgAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAgAAAAEAAAACAAAAAQAAAAMAAAADAAAAAwAAAAcAAAADgAAADwAAAAPAAAAfAAAAA/AAAD8AA
+        AAD/AAA/wAAAAP+AAZ/AAAAA/4gY/8AAAAD/GAz/wAAAAP85h//AAAAA//mH/8AAAAA=
+</value>
+  </data>
 </root>
